--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                             <div class="best__desc">
                                 <div class="best__title">100% свежее мясо</div>
                                 <div class="best__text">
-                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-                                        Ямб неравномерен.</p>
+                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                                 </div>
                             </div>
                         </li>
@@ -71,8 +70,7 @@
                             <div class="best__desc">
                                 <div class="best__title">Ручная сборка</div>
                                 <div class="best__text">
-                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-                                        Ямб неравномерен.</p>
+                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                                 </div>
                             </div>
                         </li>
@@ -83,8 +81,7 @@
                             <div class="best__desc">
                                 <div class="best__title">Натуральные ингридиенты</div>
                                 <div class="best__text">
-                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-                                        Ямб неравномерен.</p>
+                                    <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                                 </div>
                             </div>
                         </li>
@@ -107,88 +104,80 @@
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Маргарита Кофтун</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_2.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Константин Спилберг</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_3.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Евгения Малова</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_4.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Сергей Верещагин</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_5.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Никита Белых</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_6.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Ольга Зотова</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_7.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Вениамин Фокс</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                     <li class="reviews__item" style="background-image:url('../img/reviews/review_8.jpg')">
                         <div class="reviews__hover-block">
                             <h3 class="reviews__title">Робер Фоллис</h3>
                             <div class="reviews__text">
-                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда
-                                    не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким
-                                    расплавленным.</p>
+                                <p>Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.
+                                </p>
                             </div>
-
+                            <button class="btn">Подробнее</button>
                         </div>
                     </li>
                 </ul>
@@ -202,59 +191,67 @@
                 <div class="container">
                     <div class="title">Закажите доставку</div>
                     <form class="form" method="GET" autocomplete="on">
-                        <div class="form__row-left">
+                        <div class="form__block-row left">
                             <div class="form__row">
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Имя</div>
                                     <input type="text" class="form__input">
                                 </label>
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Телефон</div>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
                             <div class="form__row">
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Улица</div>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
                             <div class="form__row">
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Дом</div>
                                     <input type="text" class="form__input">
                                 </label>
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Корпус</div>
                                     <input type="text" class="form__input">
                                 </label>
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Квартира</div>
                                     <input type="text" class="form__input">
                                 </label>
-                                <label for="" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Этаж</div>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
                         </div>
-                        <div class="form__row-right">
+                        <div class="form__block-row right">
                             <div class="form__row">
-                                <label for="#" class="form__block">
+                                <label class="form__block">
                                     <div class="form__block-title">Коментарии</div>
-                                    <textarea name="Коментарии" id="" cols="30" rows="10"></textarea>
+                                    <textarea name="Коментарии" class="form__block-textarea"></textarea>
                                 </label>
                             </div>
                             <div class="form__row">
-                                <label for="pay" class="form__block">
-                                    <input type="radio" id="pay" name="pay"> Потребуется сдача
+                                <label class="form__radio">                                    
+                                    <input type="radio" class="radio__input" name="pay">
+                                    <div class="radio__input-fake"></div>
+                                    <div class="radio__input-title">Потребуется сдача</div>
                                 </label>
-                                <label for="card" class="form__block">
-                                    <input type="radio" id="card" name="pay" checked> Оплата по карте
+                                <label class="form__radio">                                    
+                                    <input type="radio" class="radio__input" name="pay" checked>
+                                    <div class="radio__input-fake"></div>
+                                    <div class="radio__input-title">Оплата картой</div>
                                 </label>
                             </div>
                             <div class="form__row">
-                                <label for="#" class="form__block"><input type="checkbox" checked> Не перезванивать
+                                <label class="form__checkbox">
+                                    <input type="checkbox" class="form__checkbox-input">
+                                    <div class="form__checkbox-fake"></div>                                    
+                                    <div class="form__checkbox-title">Не перезванивать</div>
+                                    
                                 </label>
                             </div>
                             <div class="form__row">
@@ -266,6 +263,43 @@
                 </div>
             </section>
         </div>
+        <!-- <section> -->
+        <footer class="footer">
+            <container class="container container--footer">
+                <div class="footer__block footer--contacts">
+                    <address class="footer__adres">
+                        Санкт-Петербург, ул. Бабушкина, д. 12/1, 15
+                    </address>
+                    <a href="+78123771377" class="footer__phone">+7 (812) 377-13-77</a>
+
+                </div>
+                <div class="footer__block footer--social">
+                    <!-- <div class="social__block"> -->
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a href="#" class="social__link vk">
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link fb">
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link inst">
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link twit">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+    </div>
+    </container>
+
+    </footer>
+    <!-- </section> -->
+
     </div>
     <!-- .fixed-menu -->
 </body>
